--- a/chat-space/Gemfile
+++ b/chat-space/Gemfile
@@ -39,31 +39,37 @@ group :development, :test do
   # Call 'byebug' anywhere in the code to stop execution and get a debugger console
   gem 'byebug', platform: :mri
   gem 'pry-rails'
-  gem 'rspec-rails', '~> 3.5'
-  gem 'rails-controller-testing'
-  gem 'factory_bot_rails'
-  gem 'faker'
+  gem 'capistrano'
+  gem 'capistrano-rbenv'
+  gem 'capistrano-bundler'
+  gem 'capistrano-rails'
+  gem 'capistrano3-unicorn'
 end
 
 group :development do
   # Access an IRB console on exception pages or by using <%= console %> anywhere in the code.
   gem 'web-console', '>= 3.3.0'
   gem 'listen', '~> 3.0.5'
-  # Spring speeds up development by keeping your application running in the background. Read more: https://github.com/rails/spring
-  gem 'spring'
-  gem 'spring-watcher-listen', '~> 2.0.0'
-end
-
-group :production do
-  gem 'unicorn', '5.4.1'
+  gem 'rspec-rails', '~> 3.5'
+  gem 'rails-controller-testing'
+  gem 'factory_bot_rails'
+  gem 'faker'
 end
 
 # Windows does not include zoneinfo files, so bundle the tzinfo-data gem
 gem 'tzinfo-data', platforms: [:mingw, :mswin, :x64_mingw, :jruby]
 gem 'devise'
 gem 'haml-rails'
-gem 'font-awesome-rails'
+gem 'erb2haml'
 gem 'carrierwave'
 gem 'mini_magick'
-gem 'pry-rails'
-gem 'jquery-rails'
+gem 'fog-aws'
+gem "font-awesome-rails"
+gem 'ancestry'
+gem 'gretel'
+gem 'owlcarousel-rails'
+gem 'kaminari'
+
+group :production do
+  gem 'unicorn', '5.4.1'
+end
