--- a/chat-space/Gemfile
+++ b/chat-space/Gemfile
@@ -64,7 +64,7 @@ gem 'ancestry'
 gem 'gretel'
 gem 'owlcarousel-rails'
 gem 'kaminari'
-gem 'capistrano'
+gem 'capistrano', '~> 3.5'
 gem 'capistrano-rbenv'
 gem 'capistrano-bundler'
 gem 'capistrano-rails'
